created method for getProductsCreated after + test